<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.CategoriesActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_action"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_action"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_action"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shoppingcart_action"
        android:orderInCategory="100"
        android:title="@string/action_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>