<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/etAddProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <EditText
            android:id="@+id/etAddProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp">

        <EditText
            android:id="@+id/etAddProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textLongMessage" />

    </android.support.design.widget.TextInputLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spCategoryParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:ms_arrow_tint="@color/white"
        app:ms_background_color="@color/colorPrimary"
        app:ms_text_color="@color/white" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spCategoryLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        app:ms_arrow_tint="@color/white"
        app:ms_background_color="@color/colorPrimary"
        app:ms_text_color="@color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btAddProductNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/white" />

</RelativeLayout>